style: shift circular logo clip-path center to the left to prevent cutting edge

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -40,7 +40,7 @@
 
 .footerLogoImg {
   border-radius: var(--radius-full);
-  clip-path: circle(41.5% at 50% 50%);
+  clip-path: circle(44% at 48% 50%);
 }
 
 .footerLogoText {
